[tool.poetry]
name = "rag-mcp-server"
version = "v3.4.0"
description = "Offers to use the chat interface of the RAG using MCP"
authors = [
    "STACKIT GmbH & Co. KG <data-ai@stackit.cloud>",
]
maintainers = [
    "Andreas Klos <andreas.klos@stackit.cloud>",
]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/stackitcloud/rag-template"

[tool.poetry.dependencies]
python = "^3.11"
fastmcp = "^2.13.1"
requests = "^2.32.3"
poetry = "^2.1.3"
pydantic-settings = "^2.9.1"
dependency-injector = "^4.46.0"
python-dateutil = "^2.9.0.post0"
jinja2 = "^3.1.6"
starlette = ">=0.49.1"
authlib = "^1.6.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
coverage = "^7.5.4"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.0"
flake8-black = "^0.4.0"
flake8-pyproject = "^1.2.3"
flake8-quotes = "^3.4.0"
flake8-return = "^1.2.0"
flake8-annotations-complexity = "^0.1.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.8.19"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.15.0"
flake8-eradicate = "^1.5.0"
flake8-expression-complexity = "^0.0.11"
flake8-logging-format = "^2024.24.12"
flake8-docstrings = "^1.7.0"
flake8-pytest-style = "^2.0.0"
pep8-naming = "^0.15.0"
flake8-eol = "^0.0.8"
flake8-exceptions = "^0.0.1a0"
flake8-simplify = "^0.22.0"
flake8-wot = "^0.2.0"
flake8-function-order = "^0.0.5"
flake8-tidy-imports = "^4.10.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
exclude= [".eggs", "./src/rag_backend_client", ".git", ".hg", ".mypy_cache", ".tox", ".venv", ".devcontainer", "venv", "_build", "buck-out", "build", "dist", "**/__init__.py"]
statistics = true
show-source = false
max-complexity = 8
max-annotations-complexity = 3
docstring-convention = 'numpy'
max-line-length = 120
ignore = ["E203", "W503", "E704"]
inline-quotes = '"'
docstring-quotes = '"""'
multiline-quotes = '"""'
dictionaries = ["en_US", "python", "technical", "pandas"]
ban-relative-imports = true
per-file-ignores = """
  ./tests/*: S101,S104
  ./src/settings/mcp_settings.py: S104,
  ./src/rag_mcp_server.py: D102,
  **/__init__.py: D104,
"""


[tool.black]
line-length = 120
exclude = """
/(
     .eggs
    | .git
    | .hg
    | .mypy_cache
    | .nox
    | .pants.d
    | .tox
    | .venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | venv
)/
"""


[tool.isort]
profile = "black"
skip = ['.eggs', '.git', '.hg', '.mypy_cache', '.nox', '.pants.d', '.tox', '.venv', '_build', 'buck-out', 'build', 'dist', 'node_modules', 'venv']
skip_gitignore = true

[tool.pylint]
max-line-length = 120


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
